<resources>
    <string name="app_name">MyDataBase</string>
    <string name="user_info">User Info</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_id">Enter your Id</string>
    <string name="enter_qualification">Enter Qualification</string>
    <string name="add_info">Add info</string>
    <string name="your_age">Your Age</string>
    <string name="addinfo">Enter Info</string>
    <string name="person_name">Person name</string>
    <string name="age">Age</string>
    <string name="qualification">Qualification</string>
    <string name="info">User Info</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="show_all">Show All</string>
</resources>