<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecodActivity">
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/tvTitle"
       android:text="@string/user_info"
       android:gravity="center"
       android:textSize="30sp"
       android:textStyle="bold"
       android:layout_marginTop="10dp"
       android:textColor="@color/colorBlack"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Ename"
        android:hint="@string/enter_your_name"
        android:layout_below="@+id/tvTitle"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Eage"
        android:hint="@string/your_age"
        android:layout_below="@+id/Ename"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Equlification"
        android:hint="@string/enter_qualification"
        android:layout_below="@+id/Eage"
        android:inputType="textPersonName|textCapWords"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AddButton"
        android:layout_below="@id/Equlification"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/add_info"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="16dp"
        android:background="@drawable/background"
        />

    <Button
        android:id="@+id/ShowData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AddButton"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background"
        android:text="@string/show_all"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />
    <Button
        android:id="@+id/UpDat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ShowData"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background"
        android:text="@string/update"
        android:textColor="@color/colorBlack"
        android:textStyle="bold" />
</RelativeLayout>