<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/profile"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_baseline_person_24"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_toEndOf="@+id/profile"
            android:layout_toRightOf="@+id/profile"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_name"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvQualification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qualification"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/Update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>